# Recipe-Manager

./: README.md  docker-compose.yaml  package-lock.json  package.json  requirements.txt
.github/workflows/: pr.yml
backend/: main.py  pyproject.toml  server.py
backend/crud/: category.py
backend/models/: __init__.py  category.py  recipe.py
backend/routers/: category.py  todo.py
backend/schemas/: todo.py
ui/: .eslintrc.cjs  .prettierrc  Dockerfile  index.html  package-lock.json  package.json
ui/src/: App.jsx  CreateRecipe.jsx  CreateTodo.jsx  Layout.jsx  MealPlanner.jsx  Recipes.jsx  Todos.jsx  config.js  globals.css  main.jsx
